--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
+    ext.kotlin_version = "1.3.61"
+
     apply from: 'version_refs.gradle'
     addRepos(repositories)
 
     
     dependencies {
-        classpath deps.plugin.gradle
-        classpath deps.plugin.kotlin
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
     }
 }
 
