--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.gromiloff'
 
