--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+addRepos(repositories)
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.github.dcendents.android-maven'
