--- a/version_refs.gradle
+++ b/version_refs.gradle
@@ -1,6 +1,7 @@
 static def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
+    handler.mavenCentral()
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     handler.maven { url "https://jitpack.io" }
     handler.maven { url "https://maven.google.com" }
