--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,12 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "2.0.0"
     }
 }
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
+    api "androidx.annotation:annotation:1.1.0"
 }
