--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,18 +6,27 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.gromiloff'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion build_versions.target_sdk
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         
         versionCode 2
         versionName "2.0.0"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
-    api "androidx.annotation:annotation:1.1.0"
+    api "androidx.annotation:annotation:1.2.0"
 }
